--- a/config/immersive-hotbar.json5
+++ b/config/immersive-hotbar.json5
@@ -13,10 +13,10 @@
 	textScales: true,
 	hotbarSelectionColor: 771751935,
 	lowDurabilityGlow: false,
-	immersiveToolTip: true,
-	tooltipYOffsetEnabled: true,
-	tooltipYOffset: 184,
-	scaleTooltipOffset: true,
+	immersiveToolTip: false,
+	tooltipYOffsetEnabled: false,
+	tooltipYOffset: 192,
+	scaleTooltipOffset: false,
 	durabilityGlowThreshold: 0.8,
 	showBackground: "ONLY_WHEN_SELECTED",
 	animationIntensity: 0.8,
