updated configuration for the following mods...
- timeless (disable classic creative inventory items, as it makes certain tabs not appear, i.e. poly chess)
- sound physics remastered

added configurations for the following mods...

- audio player
- physics mod
- spark
- tetris mc

disabled the following configurations and mods...

- augmentation
- tnt visualizer

--- a/config/sound_physics_remastered/allowed_sounds.properties
+++ b/config/sound_physics_remastered/allowed_sounds.properties
@@ -1872,4 +1872,6 @@ minecraft\:ui.toast.in=true
 minecraft\:ui.toast.out=true
 minecraft\:weather.rain=false
 minecraft\:weather.rain.above=false
+physicsmod\:splash_sound=true
+physicsmod\:wind=true
 pingwheel\:ping=true
