remove the followings mods...
- voxel map

add the following mods...

- xaero mini map
- xaero world map
- xaero map server utilities
- open parties and claims
- fright delight

reflect pull script for xaero data

configure all new mods and touch up existing ones

update `README`

--- a/config/physicsmod/physics_client_config.json
+++ b/config/physicsmod/physics_client_config.json
@@ -21,11 +21,11 @@
   "leashPhysics": false,
   "bannerPhysics": false,
   "clothSmoothShading": false,
-  "showUpdateNotifications": true,
+  "showUpdateNotifications": false,
   "clothThreads": 2,
   "leashLength": 4.0,
   "fishingLineLength": 8.0,
-  "pvpServerCompatibility": true,
+  "pvpServerCompatibility": false,
   "snowballModel": 0,
   "snowballImpact": 2,
   "snowballShade": true,
