--- a/config/sound_physics_remastered/allowed_sounds.properties
+++ b/config/sound_physics_remastered/allowed_sounds.properties
@@ -142,6 +142,34 @@ farmersdelight\:entity.rotten_tomato.hit=true
 farmersdelight\:entity.rotten_tomato.throw=true
 farmersdelight\:item.skillet.attack.strong=true
 farmersdelight\:item.skillet.attack.weak=true
+frightsdelight\:block.candy_basket.empty=true
+frightsdelight\:block.candy_mold.add=true
+frightsdelight\:block.candy_mold.collect=true
+frightsdelight\:block.candy_mold.drain=true
+frightsdelight\:block.candy_mold.fill=true
+frightsdelight\:block.candy_mold.harden=true
+frightsdelight\:block.candy_mold.remove=true
+frightsdelight\:block.melon_candy_basket.add=true
+frightsdelight\:block.melon_candy_basket.remove=true
+frightsdelight\:block.melon_candy_basket.shuffle=true
+frightsdelight\:block.pumpkin_candy_basket.add=true
+frightsdelight\:block.pumpkin_candy_basket.remove=true
+frightsdelight\:block.pumpkin_candy_basket.shuffle=true
+frightsdelight\:block_drinkable_feast_add=true
+frightsdelight\:block_drinkable_feast_cobweb_bubble=true
+frightsdelight\:block_drinkable_feast_ghast_tear_bubble=true
+frightsdelight\:block_drinkable_feast_remove=true
+frightsdelight\:block_drinkable_feast_rotten_flesh_bubble=true
+frightsdelight\:block_drinkable_feast_slimeapple_bubble=true
+frightsdelight\:block_drinkable_feast_soul_berry_bubble=true
+frightsdelight\:block_drinkable_feast_spider_eye_bubble=true
+frightsdelight\:block_drinkable_feast_wither_berry_bubble=true
+frightsdelight\:effect_hysteria_close=true
+frightsdelight\:effect_hysteria_far=true
+frightsdelight\:effect_hysteria_mid=true
+frightsdelight\:effect_slimed=true
+frightsdelight\:entity.bone_shard.hit=true
+frightsdelight\:entity.bone_shard.throw=true
 mcwdoors\:garage=true
 mcwdoors\:shoji=true
 minecraft\:ambient.basalt_deltas.additions=true
@@ -1875,3 +1903,4 @@ minecraft\:weather.rain.above=false
 physicsmod\:splash_sound=true
 physicsmod\:wind=true
 pingwheel\:ping=true
+spookydoors\:door_creak=true
