--- a/config/xaero/minimap/profiles/default.cfg
+++ b/config/xaero/minimap/profiles/default.cfg
@@ -80,7 +80,7 @@ minimap_display_flowers = true
 minimap_block_transparency = true
 minimap_display_stained_glass = true
 minimap_adjust_height_for_short_blocks = true
-minimap_anti_aliasing = false
+minimap_anti_aliasing = true
 minimap_size = 128
 minimap_shape = 0
 minimap_north_locked = false
